--- a/manifests/git/files/config
+++ b/manifests/git/files/config
@@ -1,8 +1,10 @@
 [user]
-        name = Rafael da Silva Almeida
-        email = eusou@rafaelalmeida.net
+	name = Rafael da Silva Almeida
+	email = eusou@rafaelalmeida.net
 [core]
-        excludesfile = ~/.gitignore
-        editor = vim
+	excludesfile = ~/.gitignore
+	editor = vim
 [color]
-        ui = true
+	ui = true
+[push]
+	default = simple
