--- a/manifests/tmux/files/general/panes.conf
+++ b/manifests/tmux/files/general/panes.conf
@@ -2,8 +2,9 @@
 unbind "\""
 unbind %
 
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # navigate in panes using Vim keys
 bind h select-pane -L
