--- a/manifests/tmux/files/general/windows.conf
+++ b/manifests/tmux/files/general/windows.conf
@@ -7,3 +7,7 @@ setw -g pane-base-index 1
 #  It causes tmux to resize a window based on the smallest client actually
 #  viewing it, not on the smallest one attached to the entire session.
 setw -g aggressive-resize on
+
+
+# Automagic reindex windows
+set-option -g renumber-windows on
